# deepsearch

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  docker-compose.yml  environment.yml  main.py  pyproject.toml
app/mult_agents/rag/: bm25_retriever.py
app/test/rag/: test_bm25_retriever.py  test_hybrid_retriever.py  test_rrf_fusion.py
docs/: 00-目录.md  01-项目概述与架构.md  02-配置系统.md  03-工作流引擎.md  04-Agent系统.md  05-工作流节点详解.md  06-RAG检索系统.md  07-记忆系统.md  08-API层与CLI.md  09-Docker部署.md  10-完整数据流.md  11-遗漏流程与工程细节.md  12-Bocha响应-MySQL表结构-SSE时间线.md
front/agent_front/: Dockerfile  nginx.conf
src/deep_research/: __init__.py  cli.py  config.py
src/deep_research/agents/: __init__.py  builder.py  graph.py
src/deep_research/agents/nodes/: __init__.py  analyze.py  base.py  evidence.py  intent.py  plan.py  search.py  write.py
src/deep_research/agents/tools/: __init__.py  file_ops.py  knowledge.py  utility.py  web.py
src/deep_research/api/: __init__.py  app.py  deps.py
src/deep_research/api/routers/: __init__.py  research.py
src/deep_research/api/schemas/: __init__.py
src/deep_research/memory/: __init__.py  long_term.py  manager.py  short_term.py  utils.py
src/deep_research/rag/: __init__.py  hybrid_retriever.py  rrf_fusion.py
src/deep_research/utils/: __init__.py
tests/: test_bocha_api.py
tests/rag/: test_bm25_retriever.py  test_hybrid_retriever.py  test_rrf_fusion.py
