[project]
name = "deep-research"
version = "0.2.0"
description = "Multi-agent deep research system with LangGraph"
requires-python = ">=3.10"
dependencies = [
  "langgraph",
  "langgraph-checkpoint-redis",
  "langgraph-checkpoint-postgres",
  "fastapi",
  "uvicorn[standard]",
  "langchain",
  "langchain-community",
  "langchain-core",
  "langchain-milvus",
  "dashscope",
  "pymilvus",
  "psycopg[binary,pool]",
  "redis",
  "python-dotenv",
  "pydantic-settings",
  "typing-extensions",
  "rank-bm25>=0.2.2",
  "jieba>=0.42.1",
  "numpy>=1.24.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
deep-research = "deep_research.cli:main"
